--- a/ShallowCopyError/ShallowCopyError.vcxproj.filters
+++ b/ShallowCopyError/ShallowCopyError.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Classinit.cpp">
+    <ClCompile Include="ShallowCopyError.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
