--- a/HookLib/HookDLL/HookDLL.vcxproj.filters
+++ b/HookLib/HookDLL/HookDLL.vcxproj.filters
@@ -13,6 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\minhook">
+      <UniqueIdentifier>{8a7409f1-98bb-4a65-bf25-74fcf91feb11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\minhook\src">
+      <UniqueIdentifier>{8b67806f-bdea-487c-9a90-43c25127e7b2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\minhook\src\hde">
+      <UniqueIdentifier>{f3f43794-350e-4e80-8d48-74f1848cbc68}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\minhook\include">
+      <UniqueIdentifier>{244d004c-8536-45e2-9e69-fd014a352401}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
@@ -27,6 +39,30 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\buffer.h">
+      <Filter>소스 파일\minhook\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\trampoline.h">
+      <Filter>소스 파일\minhook\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\hde\hde32.h">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\hde\hde64.h">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\hde\pstdint.h">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\hde\table32.h">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\src\hde\table64.h">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\minhook\include\MinHook.h">
+      <Filter>소스 파일\minhook\include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HookDLL.cpp">
@@ -37,6 +73,21 @@
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\minhook\src\buffer.c">
+      <Filter>소스 파일\minhook\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\minhook\src\hook.c">
+      <Filter>소스 파일\minhook\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\minhook\src\trampoline.c">
+      <Filter>소스 파일\minhook\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\minhook\src\hde\hde32.c">
+      <Filter>소스 파일\minhook\src\hde</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\minhook\src\hde\hde64.c">
+      <Filter>소스 파일\minhook\src\hde</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
